Alignment issue for responsive screen size

--- a/src/sass/docs.sass
+++ b/src/sass/docs.sass
@@ -99,6 +99,7 @@
       p
         +para()
         margin-bottom: 18px
+        text-align: center
       .nodejs-cntr
         padding-top: 30px
         text-align: center
@@ -362,6 +363,7 @@
         p
           +para()
           margin-bottom: 12px
+          text-align: center
           a
             +link()
             font-size: 18px
@@ -413,6 +415,7 @@
         color: $colr-white
       .other-cntr
         padding-top: 30px
+        text-align: center
         .other-i
           width: 33.33%
           display: inline-block
